[gd_scene load_steps=3 format=3 uid="uid://cv3rax1tcrg7b"]

[ext_resource type="Script" uid="uid://c4pbv7w31eigc" path="res://Components/Station/Menu/buy_menu.gd" id="1_dpwoc"]
[ext_resource type="Texture2D" uid="uid://beo4ycfrjkme4" path="res://UI/ButtonBorder.png" id="2_jxtb0"]

[node name="BuyMenu" type="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_dpwoc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Structural" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Structural:"

[node name="BuyGroup Structural" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Ring" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Structural"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Power" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Power:"

[node name="BuyGroup Power" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Power_Reactor" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Power"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="Power_Solar" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Power"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Dock" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Docks:"

[node name="BuyGroup Hangar" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Dock_Civ" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Hangar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="Dock_Cargo" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Hangar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="Dock_Industrial" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Hangar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Production" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Production:"

[node name="BuyGroup Production" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Production"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Defense" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Defense:"

[node name="BuyGroup Defense" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/BuyGroup Defense"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_jxtb0")
stretch_mode = 0

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Structural/Ring" to="." method="buy_ring"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Power/Power_Reactor" to="." method="buy_power_reactor"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Power/Power_Solar" to="." method="buy_power_solar"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Hangar/Dock_Civ" to="." method="buy_dock_civilian"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Hangar/Dock_Cargo" to="." method="buy_dock_cargo"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyGroup Hangar/Dock_Industrial" to="." method="buy_dock_industrial"]
